--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="skip">Y U DO DIS TO ME?</string>
-    <string name="sign_up">SIGN UP</string>
-    <string name="prompt_username">Username</string>
-    <string name="prompt_password">Password</string>
+    <string name="sign_up">登录</string>
+    <string name="prompt_username">用户名</string>
+    <string name="prompt_password">密码</string>
 
-    <string-array name="menu_items">
-        <item>表单列表</item>
-        <item>表单记录</item>
-        <item>笔管理</item>
-        <item>设置</item>
-        <item>检查更新</item>
-        <item>退出</item>
-    </string-array>
+    <string name="login_loading">正在登录...</string>
+    <string name="login_success">登录成功</string>
+    <string name="login_fail">登录失败，请检查用户名密码！</string>
+
+    <string name="menu_item_formlist">表单列表</string>
+    <string name="menu_item_formrecord">表单记录</string>
+    <string name="menu_item_setting">系统设置</string>
+    <string name="menu_item_upd">检查更新</string>
+    <string name="menu_item_exit">退出系统</string>
 
     <string name="cube_ptr_pull_down">下拉</string>
     <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
@@ -25,7 +26,7 @@
     <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
     <string name="cube_ptr_hours_ago">&#160;小时之前</string>
 
-    <string name="wifi_ap_name">AP Name</string>
+
     <string name="wifi_ap_psw">AP PSW</string>
     <string name="cus_info">Custom Info</string>
     <string name="start">Start</string>
