--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="menu_item_upd">检查更新</string>
     <string name="menu_item_exit">退出系统</string>
 
+    <string name="pref_header_account">个人信息</string>
+    <string name="pref_header_pen_manage">蓝牙笔管理</string>
+
+
     <string name="cube_ptr_pull_down">下拉</string>
     <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
     <string name="cube_ptr_release_to_refresh">释放刷新</string>
