add pen manager
Signed-off-by: zhangxuelin <zhangxuelin2018@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,5 +148,7 @@
     <string name="about_us">About us</string>
     <string name="pic_quality">Picture Quality</string>
 
+    <string name="connect_pen">连接蓝牙笔</string>
+
 
 </resources>
