--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="sign_up">登录</string>
     <string name="prompt_username">用户名</string>
     <string name="prompt_password">密码</string>
+    <string name="login_chk_title">记住本次登录</string>
+
 
     <string name="login_loading">正在登录...</string>
     <string name="login_success">登录成功</string>
@@ -36,6 +38,8 @@
     <string name="menu_item_next">下一页</string>
     <string name="toast_already_first">已经是第一页!</string>
     <string name="toast_already_last">已经是最后一页!</string>
+    <string name="toast_new_record">记录已创建，请开始书写!</string>
+
 
     <string name="menu_item_connect">数码笔已链接</string>
     <string name="menu_item_disconnect">数码笔未链接</string>
