--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="disconnect">断开连接</string>
     <string name="enter">进入绘制</string>
 
-
-
+    <string name="login_chk_title">记住密码</string>
+    <string name="toast_new_record">创建表单记录</string>
 
     <string name="skip">Y U DO DIS TO ME?</string>
     <string name="sign_up">登录</string>
