--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="disconnect">断开连接</string>
     <string name="enter">进入绘制</string>
 
+
+
+
     <string name="skip">Y U DO DIS TO ME?</string>
     <string name="sign_up">登录</string>
     <string name="prompt_username">用户名</string>
@@ -31,11 +34,15 @@
     <string name="title_record_list">表单记录列表</string>
 
     <string name="menu_item_add_record">创建表单记录</string>
-    <string name="menu_item_pre">前一页</string>
+    <string name="menu_item_pre">上一页</string>
     <string name="menu_item_next">下一页</string>
     <string name="toast_already_first">已经是第一页!</string>
     <string name="toast_already_last">已经是最后一页!</string>
     <string name="toast_new_record">记录已创建，请开始书写!</string>
+    <string name="loading">加载中...</string>
+    <string name="loading_new_record">正在创建记录...</string>
+    <string name="loading_pre">上一页...</string>
+    <string name="loading_next">下一页...</string>
 
 
     <string name="menu_item_connect">数码笔已链接</string>
