--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <!-- 表单记录列表 -->
     <string name="title_record_list">表单记录列表</string>
 
+    <string name="view_record_title">查看记录</string>
     <string name="menu_item_add_record">创建表单记录</string>
     <string name="menu_item_pre">上一页</string>
     <string name="menu_item_next">下一页</string>
