--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <!-- 设置 -->
     <string name="pref_header_account">个人信息</string>
     <string name="pref_header_pen_manage">数码笔管理</string>
+    <string name="pref_header_form">表单设置</string>
 
     <!-- 设置：个人账号信息-->
     <string name="setting_account_code_name">用户名</string>
@@ -79,7 +80,9 @@
     <string name="setting_pref_email_key">setting_pref_email</string>
     <string name="setting_pref_phone_key">setting_pref_phone</string>
     <string name="setting_pref_username_key">setting_pref_username</string>
-
+    <!-- 设置：表单设置 -->
+    <string name="setting_form_new">自动创建表单记录</string>
+    <string name="setting_record_last">自动打开最新记录</string>
 
 
     <string name="cube_ptr_pull_down">下拉</string>
