--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,5 @@
     <string name="connecting_pen">正在连接数码笔</string>
     <string name="pen_connect_fail">连接失败，请尝试重新连接！</string>
     <string name="scan_connect_pen_success">已成功连接数码笔</string>
+    <string name="no_recognize_stroke">该表单没有需要识别的内容！</string>
 </resources>
