--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">ZBform</string>
-
+    <string name="app_name_demo">ZBform Demo</string>
     <string name="start_scan">开始扫描</string>
     <string name="stop_scan">停止扫描</string>
     <string name="connect">连接</string>
