--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="toast_new_record">记录已创建，请开始书写!</string>
     <string name="toast_new_record_fail">记录创建失败，请打开重试!</string>
     <string name="toast_img_error">加载错误，请重新打开表单!</string>
+    <string name="toast_img_loading">表单加载中，请稍候创建记录!</string>
     <string name="loading">加载中...</string>
     <string name="loading_new_record">正在创建记录...</string>
     <string name="loading_pre">上一页...</string>
