--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,9 @@
     <string name="cube_ptr_refreshing">加载中...</string>
     <string name="cube_ptr_refresh_complete">更新完成.</string>
 
+    <string name="toast_load_last">没有啦!</string>
+
+
     <string name="cube_ptr_last_update">上次更新:&#160;</string>
     <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
     <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
